chapter7/traefik/traefik-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels: 
    k8s-app: traefik-ingress-lb
spec:
  selector:
      matchLabels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik-ingress-lb
        image: traefik:v1.7
        ports: 
          - name: http
            containerPort: 80 
            hostPort: 80
          - name: admin 
            containerPort: 8080
            hostPort: 8080
        securityContext: 
          capabilities: 
            drop: 
              - ALL
            add: 
              - NET_BIND_SERVICE
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        args: 
          - --api 
          - --kubernetes
          - --logLevel=INFO
---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: traefik-ingress-service
    namespace: kube-system
  name: traefik-ingress-services
spec:
  selector: 
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    protocol: TCP
    name: web
  - port: 8080 
    protocol: TCP
    name: admin
