chapter7/traefik/traefik-in.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
    name: web 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec: 
  rules: 
  - host: traefik-ui.aio
    http: 
      paths: 
      - path: / 
        backend:
          serviceName: traefik-web-ui
          servicePort: web
